// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not push brotli compression plugin if brotli compression is not available 1`] = `
Object {
  "plugins": Array [
    CompressionPlugin {
      "options": Object {
        "algorithm": [Function],
        "cache": false,
        "compressionOptions": Object {
          "level": 9,
        },
        "deleteOriginalAssets": false,
        "exclude": /\\^static\\[\\\\\\\\\\\\/\\]webpack\\[\\\\\\\\\\\\/\\]/,
        "filename": "[path].gz[query]",
        "include": Array [
          /\\\\\\.atom/,
          /\\\\\\.atomcat/,
          /\\\\\\.atomsvc/,
          /\\\\\\.ccxml/,
          /\\\\\\.mpd/,
          /\\\\\\.davmount/,
          /\\\\\\.dbk/,
          /\\\\\\.xdssc/,
          /\\\\\\.ecma/,
          /\\\\\\.es/,
          /\\\\\\.emma/,
          /\\\\\\.geojson/,
          /\\\\\\.gml/,
          /\\\\\\.gpx/,
          /\\\\\\.ink/,
          /\\\\\\.inkml/,
          /\\\\\\.js/,
          /\\\\\\.mjs/,
          /\\\\\\.json/,
          /\\\\\\.map/,
          /\\\\\\.jsonml/,
          /\\\\\\.jsonld/,
          /\\\\\\.lostxml/,
          /\\\\\\.mads/,
          /\\\\\\.webmanifest/,
          /\\\\\\.mrcx/,
          /\\\\\\.mathml/,
          /\\\\\\.mscml/,
          /\\\\\\.metalink/,
          /\\\\\\.meta4/,
          /\\\\\\.mets/,
          /\\\\\\.mods/,
          /\\\\\\.opf/,
          /\\\\\\.omdoc/,
          /\\\\\\.xer/,
          /\\\\\\.pls/,
          /\\\\\\.ai/,
          /\\\\\\.eps/,
          /\\\\\\.ps/,
          /\\\\\\.pskcxml/,
          /\\\\\\.raml/,
          /\\\\\\.rdf/,
          /\\\\\\.owl/,
          /\\\\\\.rif/,
          /\\\\\\.rl/,
          /\\\\\\.rld/,
          /\\\\\\.rs/,
          /\\\\\\.rsd/,
          /\\\\\\.rss/,
          /\\\\\\.rtf/,
          /\\\\\\.sbml/,
          /\\\\\\.shf/,
          /\\\\\\.smi/,
          /\\\\\\.smil/,
          /\\\\\\.srx/,
          /\\\\\\.grxml/,
          /\\\\\\.sru/,
          /\\\\\\.ssdl/,
          /\\\\\\.ssml/,
          /\\\\\\.tei/,
          /\\\\\\.teicorpus/,
          /\\\\\\.tfi/,
          /\\\\\\.toml/,
          /\\\\\\.xdp/,
          /\\\\\\.mpkg/,
          /\\\\\\.cdxml/,
          /\\\\\\.csl/,
          /\\\\\\.wbs/,
          /\\\\\\.dart/,
          /\\\\\\.uvt/,
          /\\\\\\.uvvt/,
          /\\\\\\.es3/,
          /\\\\\\.et3/,
          /\\\\\\.kml/,
          /\\\\\\.hal/,
          /\\\\\\.zmm/,
          /\\\\\\.irp/,
          /\\\\\\.lasxml/,
          /\\\\\\.lbe/,
          /\\\\\\.xul/,
          /\\\\\\.eot/,
          /\\\\\\.dd2/,
          /\\\\\\.musicxml/,
          /\\\\\\.link66/,
          /\\\\\\.sdkm/,
          /\\\\\\.sdkd/,
          /\\\\\\.wadl/,
          /\\\\\\.xsm/,
          /\\\\\\.xdm/,
          /\\\\\\.uoml/,
          /\\\\\\.osfpvg/,
          /\\\\\\.zaz/,
          /\\\\\\.vxml/,
          /\\\\\\.wasm/,
          /\\\\\\.wsdl/,
          /\\\\\\.wspolicy/,
          /\\\\\\.ncx/,
          /\\\\\\.dtb/,
          /\\\\\\.res/,
          /\\\\\\.php/,
          /\\\\\\.pac/,
          /\\\\\\.sh/,
          /\\\\\\.tar/,
          /\\\\\\.hdd/,
          /\\\\\\.ova/,
          /\\\\\\.ovf/,
          /\\\\\\.vbox/,
          /\\\\\\.vdi/,
          /\\\\\\.vhd/,
          /\\\\\\.vmdk/,
          /\\\\\\.webapp/,
          /\\\\\\.xlf/,
          /\\\\\\.xaml/,
          /\\\\\\.xdf/,
          /\\\\\\.xenc/,
          /\\\\\\.xhtml/,
          /\\\\\\.xht/,
          /\\\\\\.xml/,
          /\\\\\\.xsl/,
          /\\\\\\.xsd/,
          /\\\\\\.rng/,
          /\\\\\\.dtd/,
          /\\\\\\.xop/,
          /\\\\\\.xpl/,
          /\\\\\\.xslt/,
          /\\\\\\.xspf/,
          /\\\\\\.mxml/,
          /\\\\\\.xhvml/,
          /\\\\\\.xvml/,
          /\\\\\\.xvm/,
          /\\\\\\.yin/,
          /\\\\\\.otf/,
          /\\\\\\.ttf/,
          /\\\\\\.bmp/,
          /\\\\\\.svg/,
          /\\\\\\.svgz/,
          /\\\\\\.psd/,
          /\\\\\\.ico/,
          /\\\\\\.bmp/,
          /\\\\\\.eml/,
          /\\\\\\.mime/,
          /\\\\\\.gltf/,
          /\\\\\\.glb/,
          /\\\\\\.dae/,
          /\\\\\\.x3d/,
          /\\\\\\.x3dz/,
          /\\\\\\.appcache/,
          /\\\\\\.manifest/,
          /\\\\\\.css/,
          /\\\\\\.csv/,
          /\\\\\\.html/,
          /\\\\\\.htm/,
          /\\\\\\.shtml/,
          /\\\\\\.jsx/,
          /\\\\\\.less/,
          /\\\\\\.markdown/,
          /\\\\\\.md/,
          /\\\\\\.mdx/,
          /\\\\\\.n3/,
          /\\\\\\.txt/,
          /\\\\\\.text/,
          /\\\\\\.conf/,
          /\\\\\\.def/,
          /\\\\\\.list/,
          /\\\\\\.log/,
          /\\\\\\.in/,
          /\\\\\\.ini/,
          /\\\\\\.rtx/,
          /\\\\\\.rtf/,
          /\\\\\\.tsv/,
          /\\\\\\.uri/,
          /\\\\\\.uris/,
          /\\\\\\.urls/,
          /\\\\\\.vcard/,
          /\\\\\\.vtt/,
          /\\\\\\.mkd/,
          /\\\\\\.org/,
          /\\\\\\.pde/,
          /\\\\\\.ymp/,
          /\\\\\\.xml/,
        ],
        "minRatio": 0.8,
        "test": /\\^static\\[\\\\\\\\\\\\/\\]/,
        "threshold": 0,
      },
    },
  ],
}
`;

exports[`should push compression settings to webpack config 1`] = `
Object {
  "plugins": Array [
    CompressionPlugin {
      "options": Object {
        "algorithm": [Function],
        "cache": false,
        "compressionOptions": Object {
          "level": 9,
        },
        "deleteOriginalAssets": false,
        "exclude": /\\^static\\[\\\\\\\\\\\\/\\]webpack\\[\\\\\\\\\\\\/\\]/,
        "filename": "[path].gz[query]",
        "include": Array [
          /\\\\\\.atom/,
          /\\\\\\.atomcat/,
          /\\\\\\.atomsvc/,
          /\\\\\\.ccxml/,
          /\\\\\\.mpd/,
          /\\\\\\.davmount/,
          /\\\\\\.dbk/,
          /\\\\\\.xdssc/,
          /\\\\\\.ecma/,
          /\\\\\\.es/,
          /\\\\\\.emma/,
          /\\\\\\.geojson/,
          /\\\\\\.gml/,
          /\\\\\\.gpx/,
          /\\\\\\.ink/,
          /\\\\\\.inkml/,
          /\\\\\\.js/,
          /\\\\\\.mjs/,
          /\\\\\\.json/,
          /\\\\\\.map/,
          /\\\\\\.jsonml/,
          /\\\\\\.jsonld/,
          /\\\\\\.lostxml/,
          /\\\\\\.mads/,
          /\\\\\\.webmanifest/,
          /\\\\\\.mrcx/,
          /\\\\\\.mathml/,
          /\\\\\\.mscml/,
          /\\\\\\.metalink/,
          /\\\\\\.meta4/,
          /\\\\\\.mets/,
          /\\\\\\.mods/,
          /\\\\\\.opf/,
          /\\\\\\.omdoc/,
          /\\\\\\.xer/,
          /\\\\\\.pls/,
          /\\\\\\.ai/,
          /\\\\\\.eps/,
          /\\\\\\.ps/,
          /\\\\\\.pskcxml/,
          /\\\\\\.raml/,
          /\\\\\\.rdf/,
          /\\\\\\.owl/,
          /\\\\\\.rif/,
          /\\\\\\.rl/,
          /\\\\\\.rld/,
          /\\\\\\.rs/,
          /\\\\\\.rsd/,
          /\\\\\\.rss/,
          /\\\\\\.rtf/,
          /\\\\\\.sbml/,
          /\\\\\\.shf/,
          /\\\\\\.smi/,
          /\\\\\\.smil/,
          /\\\\\\.srx/,
          /\\\\\\.grxml/,
          /\\\\\\.sru/,
          /\\\\\\.ssdl/,
          /\\\\\\.ssml/,
          /\\\\\\.tei/,
          /\\\\\\.teicorpus/,
          /\\\\\\.tfi/,
          /\\\\\\.toml/,
          /\\\\\\.xdp/,
          /\\\\\\.mpkg/,
          /\\\\\\.cdxml/,
          /\\\\\\.csl/,
          /\\\\\\.wbs/,
          /\\\\\\.dart/,
          /\\\\\\.uvt/,
          /\\\\\\.uvvt/,
          /\\\\\\.es3/,
          /\\\\\\.et3/,
          /\\\\\\.kml/,
          /\\\\\\.hal/,
          /\\\\\\.zmm/,
          /\\\\\\.irp/,
          /\\\\\\.lasxml/,
          /\\\\\\.lbe/,
          /\\\\\\.xul/,
          /\\\\\\.eot/,
          /\\\\\\.dd2/,
          /\\\\\\.musicxml/,
          /\\\\\\.link66/,
          /\\\\\\.sdkm/,
          /\\\\\\.sdkd/,
          /\\\\\\.wadl/,
          /\\\\\\.xsm/,
          /\\\\\\.xdm/,
          /\\\\\\.uoml/,
          /\\\\\\.osfpvg/,
          /\\\\\\.zaz/,
          /\\\\\\.vxml/,
          /\\\\\\.wasm/,
          /\\\\\\.wsdl/,
          /\\\\\\.wspolicy/,
          /\\\\\\.ncx/,
          /\\\\\\.dtb/,
          /\\\\\\.res/,
          /\\\\\\.php/,
          /\\\\\\.pac/,
          /\\\\\\.sh/,
          /\\\\\\.tar/,
          /\\\\\\.hdd/,
          /\\\\\\.ova/,
          /\\\\\\.ovf/,
          /\\\\\\.vbox/,
          /\\\\\\.vdi/,
          /\\\\\\.vhd/,
          /\\\\\\.vmdk/,
          /\\\\\\.webapp/,
          /\\\\\\.xlf/,
          /\\\\\\.xaml/,
          /\\\\\\.xdf/,
          /\\\\\\.xenc/,
          /\\\\\\.xhtml/,
          /\\\\\\.xht/,
          /\\\\\\.xml/,
          /\\\\\\.xsl/,
          /\\\\\\.xsd/,
          /\\\\\\.rng/,
          /\\\\\\.dtd/,
          /\\\\\\.xop/,
          /\\\\\\.xpl/,
          /\\\\\\.xslt/,
          /\\\\\\.xspf/,
          /\\\\\\.mxml/,
          /\\\\\\.xhvml/,
          /\\\\\\.xvml/,
          /\\\\\\.xvm/,
          /\\\\\\.yin/,
          /\\\\\\.otf/,
          /\\\\\\.ttf/,
          /\\\\\\.bmp/,
          /\\\\\\.svg/,
          /\\\\\\.svgz/,
          /\\\\\\.psd/,
          /\\\\\\.ico/,
          /\\\\\\.bmp/,
          /\\\\\\.eml/,
          /\\\\\\.mime/,
          /\\\\\\.gltf/,
          /\\\\\\.glb/,
          /\\\\\\.dae/,
          /\\\\\\.x3d/,
          /\\\\\\.x3dz/,
          /\\\\\\.appcache/,
          /\\\\\\.manifest/,
          /\\\\\\.css/,
          /\\\\\\.csv/,
          /\\\\\\.html/,
          /\\\\\\.htm/,
          /\\\\\\.shtml/,
          /\\\\\\.jsx/,
          /\\\\\\.less/,
          /\\\\\\.markdown/,
          /\\\\\\.md/,
          /\\\\\\.mdx/,
          /\\\\\\.n3/,
          /\\\\\\.txt/,
          /\\\\\\.text/,
          /\\\\\\.conf/,
          /\\\\\\.def/,
          /\\\\\\.list/,
          /\\\\\\.log/,
          /\\\\\\.in/,
          /\\\\\\.ini/,
          /\\\\\\.rtx/,
          /\\\\\\.rtf/,
          /\\\\\\.tsv/,
          /\\\\\\.uri/,
          /\\\\\\.uris/,
          /\\\\\\.urls/,
          /\\\\\\.vcard/,
          /\\\\\\.vtt/,
          /\\\\\\.mkd/,
          /\\\\\\.org/,
          /\\\\\\.pde/,
          /\\\\\\.ymp/,
          /\\\\\\.xml/,
        ],
        "minRatio": 0.8,
        "test": /\\^static\\[\\\\\\\\\\\\/\\]/,
        "threshold": 0,
      },
    },
    CompressionPlugin {
      "options": Object {
        "algorithm": [Function],
        "cache": false,
        "compressionOptions": Object {
          "level": 9,
        },
        "deleteOriginalAssets": false,
        "exclude": /\\^static\\[\\\\\\\\\\\\/\\]webpack\\[\\\\\\\\\\\\/\\]/,
        "filename": "[path].br[query]",
        "include": Array [
          /\\\\\\.atom/,
          /\\\\\\.atomcat/,
          /\\\\\\.atomsvc/,
          /\\\\\\.ccxml/,
          /\\\\\\.mpd/,
          /\\\\\\.davmount/,
          /\\\\\\.dbk/,
          /\\\\\\.xdssc/,
          /\\\\\\.ecma/,
          /\\\\\\.es/,
          /\\\\\\.emma/,
          /\\\\\\.geojson/,
          /\\\\\\.gml/,
          /\\\\\\.gpx/,
          /\\\\\\.ink/,
          /\\\\\\.inkml/,
          /\\\\\\.js/,
          /\\\\\\.mjs/,
          /\\\\\\.json/,
          /\\\\\\.map/,
          /\\\\\\.jsonml/,
          /\\\\\\.jsonld/,
          /\\\\\\.lostxml/,
          /\\\\\\.mads/,
          /\\\\\\.webmanifest/,
          /\\\\\\.mrcx/,
          /\\\\\\.mathml/,
          /\\\\\\.mscml/,
          /\\\\\\.metalink/,
          /\\\\\\.meta4/,
          /\\\\\\.mets/,
          /\\\\\\.mods/,
          /\\\\\\.opf/,
          /\\\\\\.omdoc/,
          /\\\\\\.xer/,
          /\\\\\\.pls/,
          /\\\\\\.ai/,
          /\\\\\\.eps/,
          /\\\\\\.ps/,
          /\\\\\\.pskcxml/,
          /\\\\\\.raml/,
          /\\\\\\.rdf/,
          /\\\\\\.owl/,
          /\\\\\\.rif/,
          /\\\\\\.rl/,
          /\\\\\\.rld/,
          /\\\\\\.rs/,
          /\\\\\\.rsd/,
          /\\\\\\.rss/,
          /\\\\\\.rtf/,
          /\\\\\\.sbml/,
          /\\\\\\.shf/,
          /\\\\\\.smi/,
          /\\\\\\.smil/,
          /\\\\\\.srx/,
          /\\\\\\.grxml/,
          /\\\\\\.sru/,
          /\\\\\\.ssdl/,
          /\\\\\\.ssml/,
          /\\\\\\.tei/,
          /\\\\\\.teicorpus/,
          /\\\\\\.tfi/,
          /\\\\\\.toml/,
          /\\\\\\.xdp/,
          /\\\\\\.mpkg/,
          /\\\\\\.cdxml/,
          /\\\\\\.csl/,
          /\\\\\\.wbs/,
          /\\\\\\.dart/,
          /\\\\\\.uvt/,
          /\\\\\\.uvvt/,
          /\\\\\\.es3/,
          /\\\\\\.et3/,
          /\\\\\\.kml/,
          /\\\\\\.hal/,
          /\\\\\\.zmm/,
          /\\\\\\.irp/,
          /\\\\\\.lasxml/,
          /\\\\\\.lbe/,
          /\\\\\\.xul/,
          /\\\\\\.eot/,
          /\\\\\\.dd2/,
          /\\\\\\.musicxml/,
          /\\\\\\.link66/,
          /\\\\\\.sdkm/,
          /\\\\\\.sdkd/,
          /\\\\\\.wadl/,
          /\\\\\\.xsm/,
          /\\\\\\.xdm/,
          /\\\\\\.uoml/,
          /\\\\\\.osfpvg/,
          /\\\\\\.zaz/,
          /\\\\\\.vxml/,
          /\\\\\\.wasm/,
          /\\\\\\.wsdl/,
          /\\\\\\.wspolicy/,
          /\\\\\\.ncx/,
          /\\\\\\.dtb/,
          /\\\\\\.res/,
          /\\\\\\.php/,
          /\\\\\\.pac/,
          /\\\\\\.sh/,
          /\\\\\\.tar/,
          /\\\\\\.hdd/,
          /\\\\\\.ova/,
          /\\\\\\.ovf/,
          /\\\\\\.vbox/,
          /\\\\\\.vdi/,
          /\\\\\\.vhd/,
          /\\\\\\.vmdk/,
          /\\\\\\.webapp/,
          /\\\\\\.xlf/,
          /\\\\\\.xaml/,
          /\\\\\\.xdf/,
          /\\\\\\.xenc/,
          /\\\\\\.xhtml/,
          /\\\\\\.xht/,
          /\\\\\\.xml/,
          /\\\\\\.xsl/,
          /\\\\\\.xsd/,
          /\\\\\\.rng/,
          /\\\\\\.dtd/,
          /\\\\\\.xop/,
          /\\\\\\.xpl/,
          /\\\\\\.xslt/,
          /\\\\\\.xspf/,
          /\\\\\\.mxml/,
          /\\\\\\.xhvml/,
          /\\\\\\.xvml/,
          /\\\\\\.xvm/,
          /\\\\\\.yin/,
          /\\\\\\.otf/,
          /\\\\\\.ttf/,
          /\\\\\\.bmp/,
          /\\\\\\.svg/,
          /\\\\\\.svgz/,
          /\\\\\\.psd/,
          /\\\\\\.ico/,
          /\\\\\\.bmp/,
          /\\\\\\.eml/,
          /\\\\\\.mime/,
          /\\\\\\.gltf/,
          /\\\\\\.glb/,
          /\\\\\\.dae/,
          /\\\\\\.x3d/,
          /\\\\\\.x3dz/,
          /\\\\\\.appcache/,
          /\\\\\\.manifest/,
          /\\\\\\.css/,
          /\\\\\\.csv/,
          /\\\\\\.html/,
          /\\\\\\.htm/,
          /\\\\\\.shtml/,
          /\\\\\\.jsx/,
          /\\\\\\.less/,
          /\\\\\\.markdown/,
          /\\\\\\.md/,
          /\\\\\\.mdx/,
          /\\\\\\.n3/,
          /\\\\\\.txt/,
          /\\\\\\.text/,
          /\\\\\\.conf/,
          /\\\\\\.def/,
          /\\\\\\.list/,
          /\\\\\\.log/,
          /\\\\\\.in/,
          /\\\\\\.ini/,
          /\\\\\\.rtx/,
          /\\\\\\.rtf/,
          /\\\\\\.tsv/,
          /\\\\\\.uri/,
          /\\\\\\.uris/,
          /\\\\\\.urls/,
          /\\\\\\.vcard/,
          /\\\\\\.vtt/,
          /\\\\\\.mkd/,
          /\\\\\\.org/,
          /\\\\\\.pde/,
          /\\\\\\.ymp/,
          /\\\\\\.xml/,
        ],
        "minRatio": 0.8,
        "test": /\\^static\\[\\\\\\\\\\\\/\\]/,
        "threshold": 0,
      },
    },
  ],
}
`;
